# blender-cactus

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
agent/: .gitignore  pyproject.toml
agent/src/: api.py  main.py
app/: .gitignore  package.json  pnpm-lock.yaml
app/src/routes/(app)/: +layout.svelte  NavBar.svelte
cactus-agent/: .gitignore  README.md  pyproject.toml
cactus-agent/cactus_agent/: __main__.py  agent.py  blender_render.py
cactus-server/: pyproject.toml
cactus-server/cactus_server/: __main__.py  server.py
cactus-tools/: pyproject.toml
cactus-tools/cactus_tools/: __init__.py  commands.py
cactus-tools/cactus_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
client/: main.py
db/: Dockerfile
db/init/: 00-database.sql  00-roles.sql
migrations/: .gmrc  README.md  package-lock.json  package.json
migrations/data/: schema.sql
migrations/migrations/: current.sql
migrations/migrations/committed/: 000001.sql
server/: .envrc  Dockerfile  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
server/src/: graphile.ts  index.ts  server.ts
