[project]
name = "blender-cactus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = []

[tool.uv.sources]
cactus-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "cactus-tools",
    "cactus-agent",
    "cactus-server",
]
